# hands_scaphoid

./: .gitignore  .pylintrc  404.html  CODE_ANALYSIS_SUMMARY.md  CODING_STYLE_GUIDE.md  CONTRIBUTING.md  HANDLER_PATTERNS_DESIGN.md  README.md  STYLE_RULES_SUMMARY.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  test_pylint.py  time_log.md
.github/: copilot-instructions.md
.github/instructions/: commands.instructions.md  config.instructions.md  contexts.instructions.md  handlers.instructions.md  hands.instructions.md  mkdocs.instructions.md  objects.instructions.md  python.instructions.md  testing.instructions.md
.github/workflows/: ci.yml  docs.yml  publish.yml  test.yml
_inbox/: CODE_ANALYSIS_SUMMARY.md  CODING_STYLE_GUIDE.md  HANDLER_PATTERNS_DESIGN.md
a7d/: activate_venv.sh  build.sh  do_init.py  import_fixer.py  import_organizer.py  import_organizer_examples.py  update_init_files.py
a7d/tests/: test_do_init.py
api/api-reference/: index.html
api/contexts/context-managers/: index.html
api/contexts/shell-context/: index.html
api/hierarchical-contexts/: index.html
api/objects/: index.html
api/objects/archive-file/: index.html
api/objects/directory-object/: index.html
api/objects/executable-file/: index.html
api/objects/file-object/: index.html
api/objects/item-core/: index.html
api/objects/link-item/: index.html
api/objects/object-item/: index.html
api/objects/path-item/: index.html
api/objects/power-shell/: index.html
api/objects/script-file/: index.html
api/objects/shell-executable/: index.html
api/objects/ssh-shell/: index.html
api/objects/variable-item/: index.html
api/objects/wsl-shell/: index.html
api/shell/: index.html
api/shell-context/: index.html
cells/: README.md
cells/cells_contexts/: README.md  main.py  pyproject.toml
cells/cells_validators/: README.md  pyproject.toml
cells/cells_validators/src/cells_validators/: __base__.py  __init__.py
cells/cells_validators/src/cells_validators/conditions/: __init__.py  base_condition.py  logical_conditions.py  value_conditions.py
cells/cells_validators/src/cells_validators/core/: __init__.py  rule_engine.py
cells/cells_validators/src/cells_validators/rules/: __init__.py  base_rule.py
cells/cells_validators/src/cells_validators/types/: __init__.py  rule_types.py
cells/cells_validators/src/cells_validators/validators/: __init__.py  validator_mixin.py
cells/cells_validators/tests/: conftest.py  test_conditions.py  test_integration.py  test_rule_engine.py  test_rules.py  test_validator_mixin.py
dna/: .pylintrc  LICENSE  UV_LOCAL_WHEELS.md  WHEEL_INSTALLATION.md  dna.py  pyproject.toml  requirements-local.txt
dna/commands/: __init__.py  check_init.py  class_finder.py  create_file.py  create_init.py  ensure_dependencies_installed.py  file_creator.py  find_classes.py  init_checker.py  install_wheels_command.py  list_py_files.py  setup_console.py
dna/commands/_templates/cli-tool/: copier.yml  {{ tool_name }}.py.jinja
dna/commands/_templates/data-class/: copier.yml  {{ class_name }}.py.jinja
dna/commands/_templates/dna-command/: copier.yml  {{ implementation_module }}.py.jinja
dna/commands/_templates/fastapi/: .env.example.jinja  README.md.jinja  auth.py.jinja  copier.yml  database.py.jinja  main.py.jinja  models.py.jinja  requirements.txt.jinja  routers_auth.py.jinja  schemas.py.jinja
dna/commands/_templates/github-actions/: copier.yml
dna/commands/_templates/github-actions/.github/workflows/: ci.yml.jinja  release.yml.jinja
dna/commands/_templates/itemcore/: copier.yml  test_{{ filename }}.py.jinja  {{ filename }}.py.jinja
dna/commands/_templates/mkdocs/: copier.yml  mkdocs.yml.jinja
dna/commands/_templates/mkdocs/docs/: contributing.md.jinja  index.md.jinja
dna/commands/_templates/mkdocs/docs/user-guide/: installation.md.jinja
dna/commands/_templates/readme-project/: README.md.jinja  copier.yml
dna/commands/_templates/readme-subfolder/: README.md.jinja  copier.yml
dna/examples/: wheel_installer_examples.py  wheel_integration_guide.py
dna/tests/: conftest.py  test_basic.py  test_dna_cli.py  test_file_creator.py  test_templates.py  test_working.py
docs/: examples.md  getting-started.md  index.md  motivation.md  plugin-features-test.md  windows-shells.md
docs/api/: api-reference.md  objects.md  shell-context.md  shell.md
docs/api/contexts/: context-managers.md  (+2 more)
docs/operations/: summary.md
docs/user-guide/: basic-usage.md  hierarchical-contexts.md  installation.md  testing.md
examples/: core_integration_examples.py  enhanced_features_example.py  global_functions_demo.py  global_functions_integration.py  global_functions_windows.py  hierarchical_context_example.py  index.html  test_powershell_translation.py  test_wsl_functionality.py  usage_example_1.py  user_requested_example.py  windows_shells_example.py
getting-started/: index.html
motivation/: index.html
operations/summary/: index.html
plugin-features-test/: index.html
search/: search_index.json
src/hands_scaphoid/: Archive.py  ArchiveContext.py  ArchiveOperations.py  Context.py  Directory.py  DirectoryContext.py  DirectoryOperations.py  File.py  FileContext.py  FileOperations.py  Shell.py  ShellContext.py  WindowsShells.py  __base__.py  __init__.py  main.py
tests/: README.md  conftest.py  test_archive_system.py  test_final.py  test_handler_patterns.py  test_hierarchical_contexts.py  test_hierarchical_contexts_deprecated.py  test_imports.py  test_init.py  test_main.py  test_separated_architecture.py  test_separated_architecture.py.skip  test_shell.py  test_shell_context.py  test_windows_shells.py
tests/commands/: test_archive_commands.py  test_core_commands.py  test_directory_commands.py  test_file_commands.py  test_link_commands.py
tests/objects/: README.md  test_ItemCore.py  test_PathVariable.py  test_ValidationMixin.py  test_VariableItem.py
user-guide/basic-usage/: index.html
user-guide/hierarchical-contexts/: index.html
user-guide/installation/: index.html
user-guide/testing/: index.html
windows-shells/: index.html
(+111 files in other folders)
