[project]
name = "hands-scaphoid"
version = "2025.0.3"
description = "Secure shell execution context manager *for Python with ease*"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Andreas Felix Häberle", email = "felix@42sol.eu"},
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.0.0",
    "cog>=0.16.7",
    "rich>=13.0.0",
    "ruff>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.20",
    "mkdocs-include-markdown-plugin>=0.9",
]
[project.scripts]
hands-scaphoid = "hands_scaphoid.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
# addopts = [
#     "--cov=hands_scaphoid",
#     "--cov-report=term-missing",
# ]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pylint]
disable = [
    "W1203",  # logging-fstring-interpolation
]

[tool.pylint.messages_control]
disable = [
    "W1203",  # logging-fstring-interpolation: Use lazy % formatting in logging functions
]

# TODO: add cli commands  ... in sections
[project.scripts]
extract = "hands_scaphoid.cli:extract"
compress = "hands_scaphoid.cli:compress"