[project]
name = "dna"
version = "2025.0.1"
description = "daily python tasks manager."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Andreas Felix Häberle", email = "felix@42sol.eu"},
]
[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
extend-ignore = [
    "E501",   # Line too long
    "E203",   # Whitespace before ':'
    "W503",   # Line break before binary operator
]

select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "cli: marks tests as CLI integration tests",
    "integration: marks tests as integration tests",
]